<resources>
    <string name="app_name">Fit My Life</string>
    <string name="goal">Goal</string>
    <string name="food">Food</string>
    <string name="exercise">Exercise</string>
    <string name="remaining">Remaining</string>
    <string name="diary_add">Add</string>
    <string name="diary_meal_breakfast">Breakfast</string>
    <string name="diary_meal_lunch">Lunch</string>
    <string name="diary_meal_dinner">Dinner</string>
    <string name="diary_meal_snacks">Snack</string>
    <string name="diary_add_meal">Add Meal</string>
    <string name="diary_exercise">Exercise</string>
    <string name="diary_add_exercise">Add Exercise</string>
    <string name="diary_create_exercise">Create Exercise</string>
    <string name="diary_add_exercise_title">Exercise Description</string>
    <string name="add_exercise_title_example">Required (e.g. walking, jumping)</string>
    <string name="diary_food_unit_name">Serving Size</string>
    <string name="add_exercise_unit_name_example">Required (e.g. hour, minutes)</string>
    <string name="diary_exercise_length">Length</string>
    <string name="add_exercise_length_example">Required</string>
    <string name="diary_content_calorie_per_unit">Calories Burned </string>
    <string name="add_food_calorie_per_unit_example">Required</string>
    <string name="add_done">Done</string>
    <string name="general_alert">Alert</string>
    <string name="add_food_title_example">e.g. Egg, Rice</string>
    <string name="diary_create_food">Create Meal</string>
    <string name="diary_content_title">Nutrient Description</string>
    <string name="add_food_unit_name_example">Required (e.g. pound, piece)</string>
    <string name="add_food_title_example_required">Required (e.g. Egg, Rice)</string>
    <string name="add_food_amount_example">Required</string>
    <string name="required_item_empty_error">Required items cannot be empty!</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_result_error">No Results Found</string>
    <string name="internet_connection_error">Connection error. Please try again.</string>
    <string name="diary_edit_exercise">Edit Exercise</string>
    <string name="delete_item_alert">Are you sure to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>

    <string name="add_food_calory_per_unit_example">Required</string>
    <string name="diary_content_amount">Number of Servings</string>
    <string name="diary_content_calory_per_unit">Calories Per Serving</string>
    <string name="diary_exercise_unit_name">Unit</string>
    <string name="diary_content_unit_name">Time Unit</string>
    <string name="diary_edit_food">Edit Meal</string>
    <string name="action_settings">Settings</string>
    <string name="set_goal_hint">Your daily calorie goal:</string>
    <string name="dialog_positive_button_ok">OK</string>
    <string name="item_required">Required</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>

    <string name="Cycling">
        Cycling is a low-impact aerobic exercise for all ages. It can be apart of your daily routine, like when going to school. It\'s great for building stamina, strength and aerobic fitness. You can choose how intense the exercise can be."
    </string>
    <string name="Dance">
    Dancing is a fun way to incorporate exercise into your routine. The intensity differs based on the type of dance, for instance, the tango which is a slower dance and has a lower intensity compared to a hip-hop dance. It\'s a great aerobic exercise that can improve flexibility and even build muscle strength.
    </string>
    <string name="Elliptical">
        Elliptical workouts are good for your cardiovascular health. Compared to other machines, an elliptical is more simple to use and is great for beginners.
    </string>
    <string name="Hiking">
Hiking is a great way to exercise!
    </string>
    <string name="Jogging">
        Jogging is a great way to exercise!
    </string>
    <string name="JumpRope">
        Jump roping is a great way to exercise!
    </string>

    <string name="Pilates">
    Pilates is a great way to exercise!

</string>

    <string name="Pushup">
    Doing push-ups is a great way to exercise!

</string>
    <string name="Stair">
    Stair climbing is a great way to exercise!

</string>

    <string name="Strength">
    Strength training is a great way to exercise!

</string>
</resources>