<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/teal"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_edit_exercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkPink">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/diary_edit_exercise"
            android:textColor="@color/colorLightText"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/diary_exercise_title"
        style="@style/TextAppearance.AppCompat.Menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/diary_add_exercise_title" />

    <EditText
        android:id="@+id/diary_content_edit_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_exercise_title_example"
        android:maxLength="15"
        android:paddingLeft="20dp" />

    <TextView
        android:id="@+id/diary_exercise_unit_name"
        style="@style/TextAppearance.AppCompat.Menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/diary_content_unit_name" />

    <EditText
        android:id="@+id/diary_content_edit_unit_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_exercise_unit_name_example"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingLeft="20dp" />

    <TextView
        android:id="@+id/diary_exercise_amount"
        style="@style/TextAppearance.AppCompat.Menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/diary_exercise_length" />

    <EditText
        android:id="@+id/diary_content_edit_amount_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_exercise_length_example"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:maxLines="1"
        android:paddingLeft="20dp" />

    <TextView
        android:id="@+id/diary_exercise_calory_per_unit"
        style="@style/TextAppearance.AppCompat.Menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/diary_content_calorie_per_unit" />

    <EditText
        android:id="@+id/diary_content_edit_calory_per_unit_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_food_calorie_per_unit_example"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:maxLines="1"
        android:paddingLeft="20dp" />
</LinearLayout>
