<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/teal"


    tools:context=".AddFoodActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_meal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkPink">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/colorLightText"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/diary_create_food" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/diary_content_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"

        android:paddingTop="10dp"
        android:text="@string/diary_content_title" />

    <EditText
        android:id="@+id/diary_content_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/add_food_title_example_required"
        android:maxLength="40"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        />

    <TextView
        android:id="@+id/diary_content_unit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/diary_food_unit_name" />

    <EditText
        android:id="@+id/diary_content_unit_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_food_unit_name_example"
        android:inputType=""
        android:maxLength="30"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        />

    <TextView
        android:id="@+id/diary_content_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/diary_content_amount" />

    <EditText
        android:id="@+id/diary_content_amount_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_food_amount_example"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        />

    <TextView
        android:id="@+id/diary_content_calory_per_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/diary_content_calory_per_unit" />

    <EditText
        android:id="@+id/diary_content_calory_per_unit_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_food_calory_per_unit_example"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        />


</LinearLayout>